<resources>
    <string name="app_name">Georgian Folk</string>
    <string name="app_name_notification_channel">Georgian Folk Notification channel</string>
    <string name="app_name_georgian">ფოლკორი</string>
    <string name="artists">ანსამბლები</string>
    <string name="artistDetails">ანსამბლის დეტალები</string>
    <string name="settings">პარამეტრები</string>
    <string name="states">კუთხეები</string>
    <string name="oldRecordings">ჩანაწერები</string>
    <string name="favourites">ფავორიტები</string>
    <string name="songs">სიმღერები</string>
    <string name="chants">გალობა</string>
    <string name="auto_play_off">აუტომატური დაკვრა გამორთულია</string>
    <string name="auto_play_on">აუტომატური დაკვრა ჩართულია</string>
    <string name="network_is_off">ინტერნეტთან კავშირის პრობლემა</string>
    <string name="storage_options_question">სად გსურთ შეინახოთ ჩანაწერები?</string>
    <string name="storage_option_application_cache">აპლიკაციის მეხსიერებაში</string>
    <string name="storage_option_appliance_cache">ტელეფონის მეხსიერებაში</string>
    <string name="search">ძიება</string>
    <string name="search_hint">მაგ: ალილო</string>
    <string name="cancel">გაქმება</string>
    <string name="downloading">იწერება</string>
    <string name="no_records">ჩანაწერები არ არის</string>
    <string name="player">player</string>
    <string name="set">დაყენება</string>
    <string name="unset">გაუქმება</string>
    <string name="no_track">დასაკრავი სია ცარიელია</string>
    <string name="timer_title">ავტომატურად გათიშვის ტაიმერი</string>
    <string name="email_placeholder">ელ. ფოსტა</string>
    <string name="password_placeholder">პაროლი</string>
    <string name="log_in">ავტორიზაცია</string>
    <string name="registration_underline"><u>რეგისტრაცია</u></string>
    <string name="registration">რეგისტრაცია</string>
    <string name="account">მომხმარებელი</string>
    <string name="log_out">გამოსვლა</string>
    <string name="verify">დადასტურება</string>
    <string name="code">დადასტურების კოდი: 1234</string>
    <string name="lastName_placeholder">გვარი</string>
    <string name="firstName_placeholder">სახელი</string>
    <string name="song">სიმღერა</string>
    <string name="chant">გალობა</string>
    <string name="top">ტოპ</string>
    <string name="upcoming_holidays">ხსენება/დღესასწაული</string>
    <string name="dashboard">სივრცე</string>
    <string name="holidays_are_empty">სია ცარიელია</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="play_list">სია</string>
    <string name="new_list">ახალი სიის შექმნა</string>
    <string name="play_list_name">სიის სახელი</string>
    <string name="add_to_playlist">სიაში დამატება</string>
    <string name="add_to_playlist_action">დამატება</string>
    <string name="music_is_added_to_playlist">სიმღერა \"%s\" დაემატა \"%s\" სიაში</string>
    <string name="musics_is_added_to_playlist">სიმღერები \"%s\" დაემატა \"%s\" სიაში</string>
    <string name="marked_as_favourite">მონიშნულია ფავორიტად.</string>
</resources>