<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_ensembles">

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="ge.baqar.gogia.gefolk.ui.media.dashboard.DashboardFragment"
        android:label="@string/dashboard"
        tools:layout="@layout/fragment_dashboard">

    </fragment>

    <fragment
        android:id="@+id/navigation_ensembles"
        android:name="ge.baqar.gogia.gefolk.ui.media.artists.ArtistsFragment"
        android:label="@string/artists"
        tools:layout="@layout/fragment_artists">
        <argument
            android:name="artistType"
            android:defaultValue="1" />
    </fragment>

    <fragment
        android:id="@+id/navigation_oldRecordings"
        android:name="ge.baqar.gogia.gefolk.ui.media.artists.ArtistsFragment"
        android:label="@string/oldRecordings"
        tools:layout="@layout/fragment_artists">

        <argument
            android:name="artistType"
            android:defaultValue="2" />
    </fragment>

    <fragment
        android:id="@+id/navigation_artists_details"
        android:name="ge.baqar.gogia.gefolk.ui.media.songs.SongsFragment"
        android:label="@string/artistDetails"
        tools:layout="@layout/fragment_artist" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="ge.baqar.gogia.gefolk.ui.media.search.SearchFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_playlist"
        android:name="ge.baqar.gogia.gefolk.ui.media.playlist.PlayListFragment"
        android:label="@string/play_list"
        tools:layout="@layout/fragment_playlist" />

    <fragment
        android:id="@+id/navigation_favs"
        android:name="ge.baqar.gogia.gefolk.ui.media.favourites.FavouritesFragment"
        android:label="@string/favourites"
        tools:layout="@layout/fragment_favourites" />

</navigation>