<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

<!--    <item-->
<!--        android:id="@+id/navigation_dashboard"-->
<!--        android:icon="@drawable/ic_baseline_home_24"-->
<!--        android:title="@string/dashboard" />-->
    <item
        android:id="@+id/navigation_ensembles"
        android:icon="@drawable/ic_baseline_people_24"
        android:title="@string/artists" />

    <item
        android:id="@+id/navigation_oldRecordings"
        android:icon="@drawable/ic_baseline_archive_24"
        android:title="@string/oldRecordings" />
    <item
        android:id="@+id/navigation_playlist"
        android:icon="@drawable/ic_baseline_playlist_play_24_black"
        android:title="@string/play_list" />

    <item
        android:id="@+id/navigation_favs"
        android:icon="@drawable/ic_baseline_favorite_24_black"
        android:title="@string/favourites" />
</menu>