<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="loginModel"
            type="ge.baqar.gogia.goefolk.model.LoginModel" />

        <variable
            name="viewPassword"
            type="Boolean" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/include"
            layout="@layout/view_fragment_artists_toolbar" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:indeterminate="false"
            android:indeterminateTint="@color/colorAccent"
            android:progress="50"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/appCompatImageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/include"
            app:srcCompat="@drawable/ic_launcher_logo" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/emailEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/drawable_account_activity_input"
            android:fontFamily="@font/bpg_nino_mtavruli_bold"
            android:gravity="center_vertical"
            android:hint="@string/email_placeholder"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:lines="1"
            android:padding="12dp"
            android:text="@={loginModel.email}"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textColorHint="@color/hintTextColor"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appCompatImageView2" />

        <LinearLayout
            android:id="@+id/passwordLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/drawable_account_activity_input"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailEditText">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/passwordEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:fontFamily="@font/bpg_nino_mtavruli_bold"
                android:gravity="center_vertical"
                android:hint="@string/password_placeholder"
                android:imeOptions="actionNext"
                android:lines="1"
                android:maxLines="1"
                android:padding="12dp"
                android:text="@={loginModel.password}"
                android:textColor="@color/black"
                android:textColorHint="@color/hintTextColor"
                android:textSize="15sp"
                app:showPassword="@{viewPassword}" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/showPasswordBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:padding="7dp"
                app:showPasswordIcon="@{viewPassword}" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/loginButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/drawable_account_activity_button"
            android:fontFamily="@font/bpg_nino_mtavruli_bold"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/log_in"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordLayout" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/registrationLinkText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/bpg_nino_mtavruli_bold"
            android:text="@string/registration_underline"
            android:textColor="@color/black"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="@+id/loginButton"
            app:layout_constraintTop_toBottomOf="@+id/loginButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>