<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="loading"
            type="Boolean" />

        <variable
            name="daySong"
            type="String" />

        <variable
            name="dayChant"
            type="String" />

        <variable
            name="hasHolidays"
            type="Boolean" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:indeterminate="false"
            android:indeterminateTint="@color/colorAccent"
            android:progress="50"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:loading="@{loading}" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:loading="@{!loading}">

            <include
                android:id="@+id/include"
                layout="@layout/view_fragment_artists_toolbar"
                tools:layout_editor_absoluteX="50dp"
                tools:layout_editor_absoluteY="-1dp" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/searchBtn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:layout_constraintBottom_toBottomOf="@id/include"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:padding="10dp"
                app:srcCompat="@drawable/ic_baseline_search_24" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/appCompatTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                android:fontFamily="@font/bpg_nino_mtavruli_bold"
                android:text="@string/top"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/include" />

            <View
                android:id="@+id/view"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/colorGray"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/appCompatTextView" />

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:baselineAligned="false"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view">

                <LinearLayout
                    android:id="@+id/daySongLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/bpg_nino_mtavruli_bold"
                        android:text="@string/song"
                        android:textColor="@color/black"
                        android:textSize="12sp" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/ic_compact_disc_svgrepo_com" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:ellipsize="end"
                        android:fontFamily="@font/bpg_nino_mtavruli_bold"
                        android:text="@{daySong}"
                        android:textColor="@color/black" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/dayChantLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/bpg_nino_mtavruli_bold"
                        android:text="@string/chant"
                        android:textColor="@color/black"
                        android:textSize="12sp" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/ic_compact_disc_svgrepo_com" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:ellipsize="end"
                        android:fontFamily="@font/bpg_nino_mtavruli_bold"
                        android:text="@{dayChant}"
                        android:textColor="@color/black" />
                </LinearLayout>
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/appCompatTextView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="50dp"
                android:fontFamily="@font/bpg_nino_mtavruli_bold"
                android:text="@string/upcoming_holidays"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/linearLayout1" />

            <View
                android:id="@+id/view1"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/colorGray"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/appCompatTextView1" />

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/holidaysViewPager"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:areHolidaysAvailable="@{hasHolidays}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view1" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/holidaysIsEmptyTextView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:fontFamily="@font/bpg_nino_mtavruli_bold"
                android:gravity="center"
                android:text="@string/holidays_are_empty"
                android:textColor="@color/black"
                app:areHolidaysAvailable="@{!hasHolidays}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view1" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>